fix: close if tag in group.prBody template

--- a/lib/config/templates/group/pr-body.hbs
+++ b/lib/config/templates/group/pr-body.hbs
@@ -25,6 +25,8 @@ This {{#if isGitHub}}Pull{{else}}Merge{{/if}} Request renovates the package grou
 {{/unless}}
 <br />
 
+{{#if hasErrors}}
+
 ---
 
 ### Errors
