fix: use v prefix for commit message and pull request versions (#603)
Now will use “v1.0.0” instead of “version 1.0.0”

Closes #587

--- a/lib/config/templates/default/commit-message.hbs
+++ b/lib/config/templates/default/commit-message.hbs
@@ -1,1 +1,1 @@
-{{semanticPrefix}}Update dependency {{depName}} to version {{newVersion}}
+{{semanticPrefix}}Update dependency {{depName}} to v{{newVersion}}
