fix: add uniqueness to docker-digest pr title (#1051)
Use first 6 chars of sha256 digest in PR title to ensure uniqueness and not block future digest updates.

Closes #1060

--- a/lib/config/templates/docker-digest/pr-title.hbs
+++ b/lib/config/templates/docker-digest/pr-title.hbs
@@ -1,1 +1,1 @@
-Update Dockerfile {{depName}} image {{currentTag}} digest
+Update Dockerfile {{depName}} image {{currentTag}} digest ({{newDigestShort}})
