fix: use major version in pr title for docker tag updates (#1081)

--- a/lib/config/templates/docker/pr-title.hbs
+++ b/lib/config/templates/docker/pr-title.hbs
@@ -1,1 +1,1 @@
-Update Dockerfile {{depName}} image tag to {{newTag}}
+Update {{depName}} Dockerfile tag to {{#if isMajor}}v{{newVersionMajor}}{{else}}v{{newTag}}{{/if}}
