--- a/lib/config/templates/docker-digest/pr-body.hbs
+++ b/lib/config/templates/docker-digest/pr-body.hbs
@@ -1,4 +1,4 @@
-This {{#if isGitHub}}Pull{{else}}Merge{{/if}} Request updates Docker base image `{{depName}}:{{currentTag}}` to the latest digest (`{{newDigest}}`).
+This {{#if isGitHub}}Pull{{else}}Merge{{/if}} Request updates Docker base image `{{depName}}:{{currentTag}}` to the latest digest (`{{newDigest}}`). For details on Renovate's Docker support, please visit https://renovateapp.com/docs/language-support/docker
 
 {{#if schedule}}
 **Note**: This PR was created on a configured schedule ("{{schedule}}"{{#if timezone}} in timezone `{{timezone}}`{{/if}}) and will not receive updates outside those times.
